# infon

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.beads/: .beads-credential-key  metadata.json
.github/workflows/: ci.yml  docs.yml  publish.yml
.opencode/skills/epic-executor/: SKILL.md
.opencode/skills/plan-to-beads/: SKILL.md
.opencode/skills/spec-writer/: SKILL.md
BlackMagic/: THEORY.md  pyproject.toml
BlackMagic/examples/: quickstart.py
BlackMagic/src/blackmagic/: __init__.py  consolidate.py  encoder.py  extract.py  facade.py  graph_mcts.py  heads.py  imagine.py  infon.py  retrieve.py  schema.py  store.py
BlackMagic/src/blackmagic/model/: config.json  tokenizer_config.json
BlackMagic/tests/: conftest.py  test_encoder.py  test_extract.py  test_imagine.py  test_integration.py  test_retrieve.py  test_store.py
docs/: api-reference.md  ast-extraction.md  cli.md  concepts.md  contributing.md  index.md  installation.md  mcp.md  quickstart.md  schema-discovery.md
docs/publication/: draft1.txt  draft2.txt  reproduction_audit.md
openspec/: design.md  proposal.md  tasks.md
openspec/changes/: README.md
openspec/changes/epic-01-stabilize-theta/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/epic-02-synthetic-stress-and-ablations/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/epic-03-benchmarks-and-baselines/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/epic-04-paper-and-arxiv/: design.md  proposal.md  spec.md  tasks.md
openspec/specs/infon/: spec.md
reference_v1/: README.md  SPEC.md
reference_v1/examples/: automotive_schema.json
reference_v1/tests/: conftest.py  test_encoder.py  test_imagine.py  test_schema.py  test_store.py
reference_v2/: INFON_SPEC.md  paper_scenario_report.json  pyproject.toml  run_paper_scenario.py
reference_v2/src/cognition/: __init__.py  agent_tools.py  category.py  cli.py  config.py  dempster_shafer.py  encoder.py  extract.py  infon.py  logic.py  structural.py
reference_v2/src/cognition.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reference_v2/src/cognition/compute/: __init__.py  cloud.py  local.py
reference_v2/src/cognition/model/: heads.pt
reference_v2/src/cognition/store/: __init__.py  cloud.py  local.py
reference_v2/tests/: test_category.py  test_contrary.py  test_dempster_shafer.py  test_graph_mcts.py  test_heads.py  test_integration.py  test_logic.py
src/infon/: __init__.py  cli.py  consolidate.py  discovery.py  encoder.py  extract.py  grounding.py  infon.py  personas.py  retrieve.py  schema.py  store.py
src/infon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ast.py  test_cli.py  test_cli_deep_init.py  test_cli_init_mcp_config.py  test_cli_smoke.py  test_consolidate.py  test_discovery.py  test_encoder.py  test_extract.py  test_grounding.py  test_importance.py  test_infon.py  test_mcp.py  test_mcp_smoke.py  test_pyproject.py  test_repository_structure.py  test_retrieve.py  test_retrieve_keyword_fallback.py  test_schema.py  test_store.py
(+25 files in other folders)
