[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infon"
version = "0.1.0"
description = "Information network memory system using semantic anchors"
readme = "README.md"
authors = [
    {name = "Eden Duthie", email = "eduthie@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "duckdb>=0.10",
    "pydantic>=2.0",
    "click>=8.0",
    "fastmcp>=0.4",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "transformers>=4.35",
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "mkdocs-material>=9.0",
    "python-build",
]

[project.scripts]
infon = "infon.cli:cli"

[project.urls]
Homepage = "https://github.com/ontological/infon"
Documentation = "https://infon.readthedocs.io"
Repository = "https://github.com/ontological/infon"
Issues = "https://github.com/ontological/infon/issues"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
ignore_missing_imports = true
