[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackmagic"
version = "0.1.0"
description = "Sparse retrieval + reasoning + GA imagination on splade-tiny. English-only fork of cognition."
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Charles P", email = "cp@cp500.dev" }]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
blackmagic = "blackmagic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blackmagic = ["model/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
